doc: Recommend ZGC when running on Java 24+ (#241)